# Password-Analyzer

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test.py  test1.py
resources/config/: config.json
resources/icons/: config_setting.qrc
resources/language/: en-EN.yaml  ru-RU.yaml  zn-CN.yaml
src/: __init__.py  main.py
src/models/: __init__.py  checked.py  config.py  generate.py
src/utils/: __init__.py  create_files.py  creative_files.py  edit_data.py  language_config.py
src/views/: __init__.py  generate.py  generate_window.py  history_window.py  main.py  main_window.py  setting-old.py  setting.py  setting_window.py
src/views/ui/: __init__.py  config.qrc  config_rc.py  config_setting_rc.py  dialog-setting.ui  generate.py  generate_app.ui  history.py  main.py  main_app.ui  setting-old.py  setting.py
src/views/ui designer/: dialog-setting.ui  generate.py  history.py  history.ui  main.py  main_app.ui  setting.py
